--- a/themes/vixcon-hugo/assets/scss/_variables.scss
+++ b/themes/vixcon-hugo/assets/scss/_variables.scss
@@ -14,7 +14,7 @@ $gray                    : #a4a4a4;
 $gray-light               : #f8f8f8;
 $border-color             : #e8e8e8;
 
-$primary-color: #ff007a;
+$primary-color: #173E95;
 $secondary-color: #4125dd;
 $orange:#ff4747;
 $yellow:#f87c57;
