--- a/themes/vixcon-hugo/layouts/partials/header.html
+++ b/themes/vixcon-hugo/layouts/partials/header.html
@@ -62,7 +62,7 @@
         {{ if .Site.Params.navigation_button.enable }}
         {{ "<!-- get start btn -->" | safeHTML }}
         <a href="{{ .Site.Params.navigation_button.link | absLangURL }}"
-          class="btn btn-secondary btn-rounded mt-3 mt-lg-0">{{ .Site.Params.navigation_button.label }}</a>
+          class="btn btn-hero btn-rounded mt-3 mt-lg-0">{{ .Site.Params.navigation_button.label }}</a>
         {{ end }}
       </div>
     </div>
