--- a/themes/vixcon-hugo/layouts/partials/schedule.html
+++ b/themes/vixcon-hugo/layouts/partials/schedule.html
@@ -60,4 +60,25 @@
     </div>
   </div>
 </section>
+<section class="section-overview section">
+  <div class="container">
+    <div class="row section-heading">
+      <div class="col-lg-12">
+        <div class="heading">
+          <span class="stroke-text">{{ .title_overview }}</span>
+          <div>
+            <div class="row mt-2">
+              <div class="col-lg-6">
+                <p>{{ .content_overview | markdownify }}</p>
+              </div>
+              <div class="col-lg-6">
+                <p>{{ .content_invited | markdownify }}</p>
+              </div>  
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
 {{ end }}
