--- a/themes/vixcon-hugo/layouts/exposition/list.html
+++ b/themes/vixcon-hugo/layouts/exposition/list.html
@@ -24,7 +24,30 @@
 </section>
 {{ end }}
 {{ end }}
+
+
 <!-- /about -->
+{{ if $data.exposition.sponsorop.enable }}
+{{ with $data.exposition.sponsorop }}
+<section class="about-page section">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<img src="{{ .image | absURL }}" alt="" class="img-fluid">
+			</div>
+		</div>
+		<div class="row mt-5">
+			<div class="col-lg-6">
+				<h2 class="mb-4 text-lg title">{{ .title | markdownify }}</h2>
+			</div>
+			<div class="col-lg-6">
+				<p>{{ .content | markdownify }}</p>
+			</div>
+		</div>
+	</div>
+</section>
+{{ end }}
+{{ end }}
 
 <!-- sponsor -->
 {{ if $data.about.sponsor.enable }}
