--- a/themes/vixcon-hugo/assets/scss/_about.scss
+++ b/themes/vixcon-hugo/assets/scss/_about.scss
@@ -20,9 +20,9 @@
 }
 
 .stroke-text {
-	color: transparent;
+	color: #06499a7b;
 	-webkit-text-stroke-width: 1px;
-	-webkit-text-stroke-color: #ddd;
+	-webkit-text-stroke-color: #dddddd81;
 	font-size: 120px;
 	font-weight: 800;
 	text-transform: uppercase;
