Changed colors to match ACS Web Color Pallete

--- a/themes/vixcon-hugo/assets/scss/_banner.scss
+++ b/themes/vixcon-hugo/assets/scss/_banner.scss
@@ -11,7 +11,7 @@
       font-size: 80px;
       line-height: 1.2;
       letter-spacing: -.04em;
-      color: #CABE91;
+      color: #FBD333;
 
       @include desktop {
         font-size: 80px;
