First attempt at exhibitors

--- a/themes/vixcon-hugo/assets/scss/_exhibit.scss
+++ b/themes/vixcon-hugo/assets/scss/_exhibit.scss
@@ -1,4 +1,4 @@
-.sponsors {
+.exhibits {
 	position: relative;
 	/* background: url("../images/bg/cta-bg.jpg")no-repeat fixed 50% 50%; */
 	background-size: cover;
@@ -10,7 +10,7 @@
 		top: 0px;
 		width: 100%;
 		height: 100%;
-		background: rgba(0, 0, 0, 0.97);
+		background: rgb(255, 255, 255);
 	}
 }
 
