--- a/themes/vixcon-hugo/assets/scss/style.scss
+++ b/themes/vixcon-hugo/assets/scss/style.scss
@@ -99,6 +99,11 @@ Sponsors
 @import "sponsor.scss";
 
 /*-------------------------------
+Exhibitors
+-------------------------------*/
+@import "exhibit.scss";
+
+/*-------------------------------
 Countdown
 -------------------------------*/
 @import "countdown.scss";
