--- a/themes/vixcon-hugo/layouts/partials/exhibit.html
+++ b/themes/vixcon-hugo/layouts/partials/exhibit.html
@@ -1,27 +1,25 @@
 {{ $data := index .Site.Data .Site.Language.Lang }}
 
-{{ with $data.homepage.sponsor }}
-<section class="section sponsors">
+{{ with $data.homepage.exhibit }}
+<section class="section exhibits">
   <div class="container">
     <div class="row section-heading">
-      <div class="col">
+      <div class="col-lg-6">
         <div class="heading">
           <span class="stroke-text">{{ .title_outline }}</span>
           <div class="pl-90">
-            <h2 class="text-white">{{ .title | markdownify }}</h2>
+            <h2 class="text-black">{{ .title | markdownify }}</h2>
           </div>
         </div>
       </div>
     </div>
-    {{ range .sponsor_group }}
-    <div class="row">
-      <div class="col">
-        <h4 class="text-white letter-spacing text-sm">{{ .title | markdownify }}</h4>
+    {{ range .exhibit_group }}
+    <div class="row mb-5">
+      <div class="col-lg-8">
+        <h4 class="mb-4 text-black letter-spacing text-sm">{{ .title | markdownify }}</h4>
       </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        {{ range .sponsor }}
+      <div class="col-lg-12">
+        {{ range .exhibit }}
         <div class="client-item">
           {{ if and (ne .link "") (ne .link "#") }}
           <a href="{{ .link }}"><img src="{{ .logo | absURL }}" alt="" class="img-fluid"></a>
@@ -30,8 +28,8 @@
           {{ end }}
         </div>
         {{ end }}
+      </div>
     </div>
-  </div>
     {{ end }}
     {{ if .sponsorship.enable }}
     {{ with .sponsorship }}
@@ -43,5 +41,6 @@
     </div>
     {{ end }}
     {{ end }}
+  </div>
 </section>
 {{ end }}
