Changed Sponsor to Gray

--- a/themes/vixcon-hugo/layouts/partials/sponsor.html
+++ b/themes/vixcon-hugo/layouts/partials/sponsor.html
@@ -8,7 +8,7 @@
         <div class="heading">
           <span class="stroke-text">{{ .title_outline }}</span>
           <div class="pl-90">
-            <h2 class="text-white">{{ .title | markdownify }}</h2>
+            <h2 class="text-black">{{ .title | markdownify }}</h2>
           </div>
         </div>
       </div>
@@ -16,7 +16,7 @@
     {{ range .sponsor_group }}
     <div class="row">
       <div class="col">
-        <h4 class="text-white letter-spacing text-sm">{{ .title | markdownify }}</h4>
+        <h4 class="text-black letter-spacing text-sm">{{ .title | markdownify }}</h4>
       </div>
     </div>
     <div class="row">
