--- a/themes/vixcon-hugo/layouts/partials/sponsor.html
+++ b/themes/vixcon-hugo/layouts/partials/sponsor.html
@@ -37,7 +37,7 @@
     {{ with .sponsorship }}
     <div class="row">
       <div class="col-lg-12">
-        <h5 class="text-white mt-5 mb-4 h3">{{ .title | markdownify }}</h5>
+        <h5 class="text-black mt-5 mb-4 h3">{{ .title | markdownify }}</h5>
         <a href="{{ .link | safeURL }}" class="btn btn-hero btn-rounded">{{ .label }}</a>
       </div>
     </div>
